--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -5,8 +5,9 @@ spring.datasource.password={MYSQL_PASSWORD}
 spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
-do.storage.key=${DO_STORAGE_KEY}
-do.storage.secretkey=${DO_STORAGE_SECRETKEY}
+
 do.storage.endpoint=${DO_STORAGE_ENDPOINT}
 do.storage.endpoint.region=${DO_STORAGE_ENDPOINT_REGION}
+do.storage.key=${DO_STORAGE_KEY}
+do.storage.secretkey=${DO_STORAGE_SECRET_KEY}
 
